--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,13 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16'
+        node-version: '20.9.0'
 
     - name: Install dependencies
       run: npm install
 
     - name: Run tests
       run: npm test
+      
+    - name: Run build (Next.js)
+      run: npm run build
