Build: change test branch name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - developer 
+      - main 
   pull_request:
     branches:
-      - developer 
+      - main 
 
 jobs:
   build:
