CI: update branch name and nove-version on ci config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,9 @@ name: CI Pipeline
 
 on:
   push:
-    branches:
-      - main 
+    branches: [ "master" ]
   pull_request:
-    branches:
-      - main 
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -19,7 +17,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '20.9.0'
+        node-version: '20.x'
 
     - name: Install dependencies
       run: npm install
