--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,10 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "../../*"
-      ]
+      "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts","**/*.ts","**/*.tsx",".next/types/**/*.ts"],
   "exclude": [
     "node_modules"
   ]
