--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "firebase": "^10.14.0",
     "firebase-admin": "^12.6.0",
     "lucide-react": "^0.446.0",
