--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-media": "^1.5.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
